manifests/apps/gateway/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: routing-ingress
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /path1
        pathType: Prefix
        backend:
          service:
            name: back1-service
            port:
              number: 80
      - path: /path2
        pathType: Prefix
        backend:
          service:
            name: back2-service
            port:
              number: 80
